--- a/app/src/main/res/layout/activity_alarm_questions.xml
+++ b/app/src/main/res/layout/activity_alarm_questions.xml
@@ -76,7 +76,7 @@
                 android:duplicateParentState="false"
                 android:enabled="true"
                 android:text="@string/true_false"
-                android:onClick="truefalseVisible()"/>
+                android:onClick="truefalseVisible"/>
 
             <CheckBox
                 android:id="@+id/checkBox"
@@ -84,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/multiple_choice"
-                android:onClick="multiplechoiceVisible()"/>
+                android:onClick="multiplechoiceVisible"/>
 
         </LinearLayout>
 
@@ -105,6 +105,7 @@
             android:textSize="18sp" />
 
         <TableLayout
+            android:id="@+id/MultipleChoice"
             android:layout_width="match_parent"
             android:layout_height="175dp"
             android:visibility="gone">
