--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,89 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="csuchico.smartnap.Home"
-    tools:layout_editor_absoluteY="81dp"
-    tools:layout_editor_absoluteX="0dp">
+    tools:context="csuchico.smartnap.Home">
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add Alarm"
+        android:layout_marginStart="62dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Set Alarm"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/button5"
+        android:layout_marginStart="55dp" />
 
     <LinearLayout
-        android:layout_width="368dp"
-        android:layout_height="495dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/button5"
+        android:layout_marginTop="16dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        android:weightSum="1"
+        android:id="@+id/linearLayout">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:orientation="horizontal"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp">
+            android:layout_height="410dp">
 
-            <Button
-                android:id="@+id/NewAlarm"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="54dp"
-                android:layout_weight="1"
-                android:onClick="Alarmsetup"
-                android:text="Create New Alarm"
-                tools:layout_editor_absoluteX="185dp"
-                tools:layout_editor_absoluteY="-7dp" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/EditAlarm"
-                android:layout_width="match_parent"
-                android:layout_height="58dp"
-                android:layout_weight="1"
-                android:text="Edit"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="-10dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
-
-                <LinearLayout
+                <TextView
+                    android:id="@+id/textView6"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
+                    android:layout_height="43dp"
+                    android:text="TextView" />
 
-                    <TextClock
-                        android:id="@+id/CurrentAlarm"
-                        android:layout_width="match_parent"
-                        android:layout_height="65dp"
-                        android:layout_weight="1"
-                        android:textAlignment="center"
-                        android:textSize="36sp"
-                        tools:layout_editor_absoluteX="0dp"
-                        tools:layout_editor_absoluteY="47dp" />
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:text="TextView" />
 
-                    <Switch
-                        android:id="@+id/AlarmSwitch"
-                        android:layout_width="79dp"
-                        android:layout_height="64dp"
-                        android:checked="false"
-                        android:showText="true"
-                        android:splitTrack="false"
-                        android:switchMinWidth="?attr/actionBarSize"
-                        android:textColorLink="@color/colorPrimary"
-                        tools:checked="false"
-                        tools:layout_editor_absoluteX="225dp"
-                        tools:layout_editor_absoluteY="47dp" />
-                </LinearLayout>
-            </ScrollView>
-
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="match_parent"
+                    android:layout_height="51dp"
+                    android:text="TextView" />
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
