--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -17,9 +17,11 @@
             android:id="@+id/headerText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Edit Alarm"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:text="@string/newAlarmHeader"
             android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+            android:textSize="30sp"
             tools:layout_editor_absoluteX="8dp"
             tools:layout_editor_absoluteY="33dp" />
 
@@ -37,15 +39,25 @@
             app:layout_constraintRight_toRightOf="parent"
             tools:layout_editor_absoluteY="0dp" />
 
-        <Button
-            android:id="@+id/buttonCreateAlarm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="createNewAlarm"
-            android:text="Create"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="407dp" />
-
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="174dp"
+        android:layout_height="62dp"
+        android:text="@string/addFlashCard"
+        tools:layout_editor_absoluteX="103dp"
+        tools:layout_editor_absoluteY="317dp" />
+
+    <Button
+        android:id="@+id/buttonCreateAlarm"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="308dp"
+        android:layout_height="66dp"
+        android:onClick="createNewAlarm"
+        android:text="@string/setNewAlarm"
+        android:textAppearance="@style/TextAppearance.AppCompat.Button"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="429dp" />
 
 </android.support.constraint.ConstraintLayout>
