--- a/app/src/main/res/layout/activity_alarm_dialog.xml
+++ b/app/src/main/res/layout/activity_alarm_dialog.xml
@@ -47,6 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3.37"
+                android:background="@android:color/white"
                 android:clickable="true"
                 android:onClick="to_answer"
                 android:text="@string/this_will_be_the_question"
@@ -58,6 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2.78"
+                android:background="@android:color/white"
                 android:clickable="true"
                 android:onClick="to_question"
                 android:text="@string/this_will_be_the_answer"
