--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -8,18 +8,15 @@
 
     <TextView
         android:id="@+id/headerText"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="55dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         android:text="@string/newAlarmHeader"
-        android:textAlignment="left"
         android:textAllCaps="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textSize="30sp"
-        tools:layout_editor_absoluteX="-1dp"
+        tools:layout_editor_absoluteX="18dp"
         tools:layout_editor_absoluteY="8dp" />
 
     <LinearLayout
@@ -44,25 +41,21 @@
 
     <TimePicker
         android:id="@+id/alarmTimePicker"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="212dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:timePickerMode="spinner"
         android:visibility="visible"
-        tools:layout_editor_absoluteX="53dp"
+        tools:layout_editor_absoluteX="52dp"
         tools:layout_editor_absoluteY="149dp" />
 
     <EditText
         android:id="@+id/alarmNameEdit"
-        android:layout_width="match_parent"
+        android:layout_width="344dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:ems="10"
         android:inputType="text"
         android:text="Name"
-        tools:layout_editor_absoluteX="-10dp"
+        tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="72dp" />
 
 </android.support.constraint.ConstraintLayout>
