--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="62dp"
-        android:onClick="Alarmsetup"
+        android:onClick="alarmSetup"
         android:text="Add Alarm"/>
 
     <Button
