--- a/app/src/main/res/layout/activity_alarm_dialog.xml
+++ b/app/src/main/res/layout/activity_alarm_dialog.xml
@@ -1,10 +1,10 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#0099cc"
-    android:elevation="0dp"
-    tools:context="csuchico.smartnap.AlarmDialog">
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="#222244"
+             android:elevation="0dp"
+             tools:context="csuchico.smartnap.AlarmDialog">
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
@@ -38,49 +38,63 @@
                 android:id="@+id/textClock"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.16"
+                android:layout_weight="0.01"
                 android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display3" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
+                android:textColor="@color/colorDarkBlue"/>
 
             <TextView
-                android:id="@+id/textView8"
+                android:id="@+id/alarmName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.97"
-                android:text="@string/textview"
-                android:visibility="invisible" />
+                android:layout_weight="0.01"
+                android:text="@string/dialog_AlarmName"
+                android:textAlignment="center"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+                android:textColor="@color/colorLighterBlue"
+                android:textStyle="bold"
+                android:visibility="visible"/>
 
-            <TextView
-                android:id="@+id/fc_question"
+            <FrameLayout
+                android:id="@+id/flashCardBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="6.87"
-                android:background="@android:color/white"
-                android:clickable="true"
-                android:onClick="to_answer"
-                android:text="@string/this_will_be_the_question"
-                android:textSize="22sp"
-                android:visibility="visible" />
+                android:layout_height="200dp"
+                android:layout_weight="0.16">
 
-            <TextView
-                android:id="@+id/fc_answer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2.78"
-                android:background="@android:color/white"
-                android:clickable="true"
-                android:onClick="to_question"
-                android:text="@string/this_will_be_the_answer"
-                android:textSize="22sp"
-                android:visibility="gone" />
+                <TextView
+                    android:id="@+id/fc_answer"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_weight="2.78"
+                    android:background="@android:color/white"
+                    android:clickable="true"
+                    android:onClick="to_question"
+                    android:text="@string/this_will_be_the_answer"
+                    android:textSize="22sp"
+                    android:visibility="gone"/>
 
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.99"
-                android:text="@string/textview1"
-                android:visibility="invisible" />
+                <TextView
+                    android:id="@+id/fc_question"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_weight="6.87"
+                    android:background="@android:color/white"
+                    android:clickable="true"
+                    android:onClick="to_answer"
+                    android:padding="15dp"
+                    android:text="@string/this_will_be_the_question"
+                    android:textSize="22sp"
+                    android:visibility="visible"/>
+
+            </FrameLayout>
 
             <Button
                 android:id="@+id/button_silenceAlarm"
@@ -89,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:background="#FF0044"
                 android:onClick="onSilenceAlarm"
-                android:text="@string/silence_alarm" />
+                android:text="@string/silence_alarm"/>
         </LinearLayout>
 
     </FrameLayout>
