--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
-
+    <color name="colorDarkBlue">#0044CC</color>
+    <color name="colorLighterBlue">#0099FF</color>
     <color name="black_overlay">#66000000</color>
 </resources>
