--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="25dp"
+            android:layout_marginTop="10dp"
             android:ems="10"
             android:inputType="text"
             android:text="@string/inputAlarmName"
