--- a/app/src/main/res/layout/activity_alarm_dialog.xml
+++ b/app/src/main/res/layout/activity_alarm_dialog.xml
@@ -18,18 +18,6 @@
         android:padding="10dp">
 
         <LinearLayout
-            android:id="@+id/fullscreen_content_controls"
-            style="?metaButtonBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/black_overlay"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
-
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -59,6 +47,7 @@
                 android:id="@+id/flashCardBox"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
+                android:layout_marginBottom="30dp"
                 android:layout_weight="0.16">
 
                 <TextView
@@ -81,7 +70,7 @@
                     android:id="@+id/fc_question"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="50dp"
+                    android:layout_marginBottom="25dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="25dp"
@@ -96,14 +85,27 @@
 
             </FrameLayout>
 
-            <Button
-                android:id="@+id/button_silenceAlarm"
-                style="@style/Widget.AppCompat.Button.Colored"
+            <LinearLayout
+                android:id="@+id/fullscreen_content_controls"
+                style="?metaButtonBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#FF0044"
-                android:onClick="onSilenceAlarm"
-                android:text="@string/silence_alarm"/>
+                android:layout_gravity="bottom|center_horizontal"
+                android:layout_weight="0.01"
+                android:background="@color/black_overlay"
+                android:orientation="horizontal"
+                tools:ignore="UselessParent">
+
+                <Button
+                    android:id="@+id/button_silenceAlarm"
+                    style="@style/Widget.AppCompat.Button.Colored"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="#FF0044"
+                    android:onClick="onSilenceAlarm"
+                    android:text="@string/silence_alarm"/>
+            </LinearLayout>
         </LinearLayout>
 
     </FrameLayout>
