--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -49,9 +49,9 @@
 
         <Button
             android:id="@+id/buttonCreateAlarm"
-            style="@style/Widget.AppCompat.Button.Colored"
+            style="@android:style/Widget.DeviceDefault.Button"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:onClick="createNewAlarm"
             android:text="@string/label_setNewAlarm"
@@ -59,6 +59,15 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             tools:layout_editor_absoluteY="417dp"/>
+
+        <Button
+            android:id="@+id/button_deleteAlarm"
+            style="@style/Widget.AppCompat.Button.Small"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="deleteAlarm"
+            android:text="@string/label_deleteAlarm"
+            android:visibility="invisible"/>
 
     </LinearLayout>
 
